objects/PMC_TriggerSwitches__mdt.object
<CustomObject>
    <description>This custom metadata is used to bypass trigger operations.</description>
    <fields>
        <fullName>PMC_AfterDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_AfterInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_AfterUndelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_AfterUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BeforeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BeforeInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BeforeUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <label>PMC Trigger Switches</label>
    <pluralLabel>PMC Trigger Switches</pluralLabel>
</CustomObject>